force-app/main/default/objects/Case/fields/Case_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Case_Test_Field__c</fullName>
    <label>Case Test Field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>