force-app/main/default/objects/Case/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed Fraud</fullName>
            </value>
            <value>
                <fullName>Mailing List</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Suspected Fraud</fullName>
            </value>
            <value>
                <fullName>VOF MSC</fullName>
            </value>
            <value>
                <fullName>VOF Tymit MSC</fullName>
            </value>
            <value>
                <fullName>VOF Urgent</fullName>
            </value>
            <value>
                <fullName>CFAS LOADINGS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>